--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bcrypt>=5.0.0",
     "django>=5.2.8",
+    "pillow>=12.0.0",
     "python-dotenv>=1.2.1",
 ]
