--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "bcrypt>=5.0.0",
     "django>=5.2.8",
+    "django-admin-ordering>=0.20.0",
+    "django-admin-sortable2>=2.2.8",
+    "fuzzywuzzy>=0.18.0",
+    "nepali-datetime>=1.0.8.4",
     "pillow>=12.0.0",
     "python-dotenv>=1.2.1",
+    "python-levenshtein>=0.27.3",
 ]
