--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,11 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+# Node
+node_modules/
+npm-debug.log
+yarn-error.log
+yarn-debug.log*
 # Environments
 .env
 .venv
