--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,5 @@ dependencies = [
     "pymysql>=1.1.2",
     "python-dotenv>=1.2.1",
     "python-levenshtein>=0.27.3",
+    "sentry-sdk>=2.48.0",
 ]
