--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ python-dotenv==1.2.1
 python-levenshtein==0.27.3
 rapidfuzz==3.14.3
 requests==2.32.5
+sentry-sdk==2.48.0
 six==1.17.0
 sqlparse==0.5.3
 urllib3==2.5.0
