--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "bcrypt>=5.0.0",
+    "bleach>=6.3.0",
     "dj-database-url>=3.0.1",
     "django>=5.2.8",
     "django-admin-ordering>=0.20.0",
