--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.10.0
 bcrypt==5.0.0
+bleach==6.3.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 cloudinary==1.44.1
@@ -23,3 +24,4 @@ sentry-sdk==2.48.0
 six==1.17.0
 sqlparse==0.5.3
 urllib3==2.5.0
+webencodings==0.5.1
